--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohttp==3.8.1
+aiohttp==3.8.1
 aiosignal==1.2.0
 anyio==3.6.1
 asgiref==3.5.2
@@ -14,7 +14,7 @@ click==8.1.3
 colorama==0.4.4
 dnspython==2.2.1
 ecdsa==0.17.0
-fastapi==0.78.0
+fastapi[all]
 frozenlist==1.3.0
 h11==0.13.0
 idna==3.3
